<resources>
    <string name="app_name">部件触发器</string>
	<string name="activity_add_title">添加</string>
	<string name="activity_add_name_mask">新建任务</string>
	<string name="activity_edit_title">编辑</string>
	<string name="activity_triggers">触发条件</string>
	<string name="activity_taskgui_exceptions_title">触发例外</string>
	<string name="activity_taskgui_actions_title">触发操作</string>
	<string name="activity_taskgui_sms_title">发送短信</string>
	<string name="activity_settings_title">设置</string>
    <string name="activity_log">日志</string>
	<string name="activity_log_filter_title">筛选</string>
	<string name="activity_log_filter_all">全部</string>
	<string name="activity_log_filter_today">今天</string>
	<string name="activity_log_filter_three_days">近三天</string>
	<string name="activity_log_filter_one_week">近一周</string>
	<string name="activity_profile">切换列表</string>
	<string name="activity_main_att">当前任务为空</string>
	<string name="activity_main_service_disabled_att">服务已停止运行</string>
	<string name="activity_main_service_disabled_att_action">立即启用</string>
	<string name="activity_action_switch_task_null">列表中没有任务</string>
	<string name="activity_action_app_open_title">运行应用</string>
	<string name="activity_action_app_open_msg">运行指定的应用</string>
	<string name="activity_action_app_close_title">关闭应用</string>
	<string name="activity_action_app_close_msg">*注意:此操作为强制结束应用的进程</string>
	<string name="activity_trigger_wifi_dialog_att">指定SSID</string>
	<string name="activity_trigger_wifi_no_ssid_assigned">任何WiFi网络</string>
	<string name="activity_trigger_wifi_assigned_ssid">指定的WiFi网络</string>
	<string name="activity_trigger_wifi_open_att">打开WiFi开关来查看SSID选项</string>
	<string name="activity_trigger_app_usage_att">此触发器需要授权获取使用情况权限</string>
	<string name="snackbar_action_open_wifi">打开WiFi</string>
    <string name="dialog_button_positive">确定</string>
    <string name="dialog_button_negative">取消</string>
	<string name="dialog_button_yes">是</string>
	<string name="dialog_button_no">否</string>
	<string name="dialog_name_hint">输入名称</string>
	<string name="dialog_battery_checkbox_enabled">启用</string>
    <string name="dialog_battery_compare_more_than">大于</string>
    <string name="dialog_battery_compare_less_than">小于</string>
    <string name="dialog_battery_compare_higher_than">高于</string>
    <string name="dialog_battery_compare_lower_than">低于</string>
	<string name="dialog_battery_not_enabled">未启用</string>
	<string name="dialog_triggers_widget_att">*注意:其他触发了开关的任务可能会触发此触发器。</string>
	<string name="dialog_triggers_widget_wifi_on">WiFi打开时</string>
	<string name="dialog_triggers_widget_wifi_off">WiFi关闭时</string>
	<string name="dialog_triggers_widget_bluetooth_on">蓝牙打开时</string>
	<string name="dialog_triggers_widget_bluetooth_off">蓝牙关闭时</string>
	<string name="dialog_triggers_widget_net_on">数据流量连接时</string>
	<string name="dialog_triggers_widget_net_off">数据流量断开时</string>
	<string name="dialog_triggers_widget_ring_mode_off">静音模式时</string>
	<string name="dialog_triggers_widget_ring_mode_vibrate">振动模式时</string>
	<string name="dialog_triggers_widget_ring_mode_normal">正常响铃模式时</string>
	<string name="dialog_triggers_widget_airplane_mode_on">飞行模式打开时</string>
	<string name="dialog_triggers_widget_airplane_mode_off">飞行模式关闭时</string>
	<string name="dialog_triggers_widget_ap_on">打开热点时</string>
	<string name="dialog_triggers_widget_ap_off">关闭热点时</string>
	<string name="activity_triggers_screen">屏幕</string>
	<string name="activity_triggers_screen_on">屏幕点亮时</string>
	<string name="activity_triggers_screen_off">屏幕关闭时</string>
	<string name="activity_triggers_power">电源</string>
	<string name="activity_triggers_power_connected">接通电源时</string>
	<string name="activity_triggers_power_disconnected">断开电源时</string>
	<string name="activity_triggers_widget_changed">选择开关</string>
	<string name="dialog_trigger_type_per_certain_time_invalid_value">无效的数字格式，请重新输入</string>
	<string name="dialog_trigger_type_per_certain_time_more_than_zero">触发间隔须大于0</string>
	<string name="dialog_trigger_type_per_certain_time_out_of_range">数值超过范围</string>
	<string name="dialog_edit_changed_not_saved_title">未保存修改</string>
	<string name="dialog_edit_changed_not_saved_message">当前修改没有保存，是否退出？</string>
	<string name="snackbar_changes_not_saved_back">当前没有保存更改，再按一次确认退出</string>
	<string name="dialog_task_name_title">任务名称</string>
	<string name="dialog_task_name_invalid">输入任务名称</string>
	<string name="dialog_exceptions_day_of_week_title">指定一周中某天</string>
	<string name="dialog_exceptions_day_of_week_all_selected">不能够全部选择</string>
	<string name="dialog_exceptions_period_title">指定时间段</string>
	<string name="dialog_exceptions_period_same_time">开始时间和结束时间不能相同</string>
	<string name="dialog_actions_brightness_title">调整屏幕亮度</string>
	<string name="dialog_actions_brightness_auto">自动亮度</string>
	<string name="dialog_actions_brightness_manual">手动亮度</string>
	<string name="dialog_actions_ring_volume_title">音量调节</string>
	<string name="dialog_actions_ring_volume_ring">铃声音量:</string>
	<string name="dialog_actions_ring_volume_media">媒体音量:</string>
	<string name="dialog_actions_ring_volume_notification">通知音量:</string>
	<string name="dialog_actions_ring_volume_alarmclock">闹钟音量:</string>
	<string name="activity_ring_selection_title">更改铃声</string>
	<string name="dialog_actions_ring_notification_selection">更改通知铃声</string>
	<string name="dialog_actions_ring_phone_selection">更改来电铃声</string>
    <string name="dialog_actions_ring_selection_system">系统铃声</string>
    <string name="dialog_actions_ring_selection_media">媒体库</string>
	<string name="dialog_actions_ring_selection_folder">应用内目录</string>
	<string name="dialog_actions_ring_selection_system_dialog_title">系统铃声</string>
	<string name="dialog_actions_wallpaper_att">注意:过大的图片可能会导致本应用OOM，请选择合适大小的图片</string>
	<string name="dialog_actions_wallpaper_select">选择/更改图片</string>
	<string name="dialog_actions_vibrate_title">振动器</string>
    <string name="dialog_actions_toast_title">显示Toast</string>
    <string name="dialog_actions_toast_edit_hint">输入Toast内容</string>
	<string name="dialog_actions_vibrate_frequency">振动次数</string>
	<string name="dialog_actions_vibrate_duration">持续时间</string>
	<string name="dialog_actions_vibrate_interval">间隔时间</string>
	<string name="dialog_actions_vibrate_frequency_measure">次</string>
	<string name="dialog_actions_vibrate_duration_measure">毫秒</string>
	<string name="dialog_actions_vibrate_interval_measure">毫秒</string>
	<string name="dialog_actions_notification_title">推送通知</string>
	<string name="dialog_actions_notification_selection_not_override">通知栏通知(不覆盖)</string>
	<string name="dialog_actions_notification_selection_override_last">通知栏通知(覆盖上一个)</string>
	<string name="dialog_actions_notification_operation_custom">自定义通知内容</string>
	<string name="dialog_actions_notification_operation_custom_title_hint">通知标题</string>
	<string name="dialog_actions_notification_operation_custom_message_hint">通知内容</string>
	<string name="dialog_api_title">选择计时器API</string>
	<string name="dialog_api_android_alarm_manager">Android Alarm Manager</string>
	<string name="dialog_api_java_timer">Java Timer(会保持唤醒)</string>
	<string name="dialog_get_superuser_att">授予Root权限</string>
	<string name="dialog_get_superuser_message">开启超级用户模式需要为本应于授予Root权限。\n请在授权时选择永久授权并且不再询问，否则会造成自动任务无法正常执行。</string>
	<string name="dialog_get_superuser_button_confirm">授权</string>
    <string name="dialog_log_clear_title">清空日志</string>
    <string name="dialog_log_clear_message">点击“确定”将清空所有日志。\n注意：此操作不可撤销。</string>
	<string name="dialog_wait_att">请等待&#8230;</string>
	<string name="dialog_profile_new_profile_title">新建列表</string>
	<string name="dialog_profile_delete_title">删除列表</string>
	<string name="dialog_profile_delete_message">确认要删除列表 </string>
	<string name="dialog_profile_delete_multi_message">确认要删除选定的列表吗？</string>
	<string name="dialog_profile_new_profile_toast_invalid_name">请输入名称</string>
	<string name="dialog_profile_rename_title">更改名称</string>
	<string name="dialog_profile_import_title">选择文件</string>
	<string name="dialog_profile_attention">请选择若干项来导入列表</string>
	<string name="dialog_profile_import_no_file_title">没有文件</string>
	<string name="dialog_profile_import_no_file_att1">没有找到可以导入的文件。\n可以将要导入的列表文件(.json)拷贝到“存储/Android/data/</string>
	<string name="dialog_profile_import_no_file_att2">/files”路径下然后重试。</string>
	<string name="dialog_profile_delete_confirm">再点击一次确定删除</string>
	<string name="dialog_profile_delete_no_selection">选择若干项来删除</string>
	<string name="profile_export_complete">文件已导出至</string>
	<string name="activity_main_toast_task_invalid">任务过期，请重新编辑保存</string>
	<string name="activity_main_toast_task_invalid_action">修改</string>
	<string name="activity_main_item_battery_more_than_percentage">电量大于</string>
	<string name="activity_main_item_battery_less_than_percentage">电量小于</string>
	<string name="activity_main_item_battery_higher_than_temperature">电池温度高于</string>
	<string name="activity_main_item_battery_lower_than_temperature">电池温度低于</string>
	<string name="activity_taskgui_toast_no_actions">请至少选择一个触发操作</string>
	<string name="activity_taskgui_toast_time_invalid">单次任务类型，并且设定的时间早于当前系统时间</string>
	<string name="activity_taskgui_condition_single_att">仅一次</string>
	<string name="activity_taskgui_condition_single_value">触发时间：</string>
	<string name="activity_taskgui_condition_percertaintime_att">按指定时间重复</string>
	<string name="activity_taskgui_condition_weekloop_att">按周重复</string>
	<string name="activity_trigger_brightness">环境亮度</string>
	<string name="trigger_brightness_higher_than">亮度高于</string>
	<string name="trigger_brightness_lower_than">亮度低于</string>
	<string name="trigger_brightness_edit_hint">输入亮度值</string>
	<string name="trigger_brightness_unit">lux(勒克斯)</string>
	<string name="action_flashlight">闪光灯</string>
	<string name="action_flashlight_custom">自定义数组(毫秒)</string>
	<string name="action_flashlight_hint_custom">参数，英文逗号隔开</string>
	<string name="activity_call_status_incoming_call">来电时</string>
	<string name="activity_call_status_connected">电话接通时</string>
	<string name="activity_call_status_finished">挂断时</string>
	<string name="activity_call_status_att">输入联系人号码进行筛选过滤，或者留空不做过滤</string>
	<string name="activity_call_number_hint">输入号码，英文逗号隔开</string>
	<string name="privilege_att">触发行为可能会使用到的权限测试，测试执行操作时是否会被系统拦截提示，如果会被拦截则表示触发行为可能无法准确完成触发，请取消拦截，或者跳转至本应用详情页进行修改</string>
	<string name="privilege_button_wifi">WiFi打开测试</string>
	<string name="privilege_button_bluetooth">蓝牙打开测试</string>
	<string name="privilege_button_flashlight">闪光灯测试</string>
	<string name="privilege_button_notification_policy">勿扰模式权限测试</string>
	<string name="privilege_button_read_phone_state">读取手机状态权限测试</string>
	<string name="privilege_button_read_external_storage">读取存储权限测试</string>
	<string name="privilege_button_send_sms">发送短信测试</string>
	<string name="privilege_button_write_settings">写入设置测试</string>
	<string name="privilege_button_notification_policy_page">跳转至勿扰模式权限页面</string>
	<string name="privilege_button_usage_page">跳转至应用使用情况权限页面</string>
	<string name="privilege_button_read_notification_page">跳转至读取通知权限页面</string>
	<string name="privilege_button_write_settings_page">跳转至修改系统设置页面</string>
	<string name="privilege_button_app_detail">跳转至本应用详情页</string>
	<string name="monday">周一</string>
	<string name="tuesday">周二</string>
	<string name="wednesday">周三</string>
	<string name="thursday">周四</string>
	<string name="friday">周五</string>
	<string name="saturday">周六</string>
	<string name="sunday">周日</string>
	<string name="unselected">不选择此操作</string>
	<string name="preview">预览</string>
	<string name="add">添加</string>
	<string name="action_delete">删除</string>
    <string name="action_settings">设置</string>
	<string name="action_selectall">全选</string>
    <string name="action_deselectall">全不选</string>
	<string name="action_ascend">时间升序</string>
	<string name="action_descend">时间降序</string>
	<string name="action_clean_logs">清空日志</string>
	<string name="action_profile">切换列表</string>
	<string name="action_import">导入</string>
	<string name="action_export">导出</string>
</resources>