<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_att"
            android:layout_marginBottom="20dp"/>
        <Button
            android:id="@+id/privilege_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_wifi"/>
        <Button
            android:id="@+id/privilege_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_bluetooth"/>
        <Button
            android:id="@+id/privilege_flashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_flashlight"/>
        <Button
            android:id="@+id/privilege_notification_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_notification_policy"/>
        <Button
            android:id="@+id/privilege_read_phone_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_read_phone_state"/>
        <Button
            android:id="@+id/privilege_read_external_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_read_external_storage"/>
        <Button
            android:id="@+id/privilege_send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_send_sms"/>
        <Button
            android:id="@+id/privilege_write_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_write_settings"/>
        <Button
            android:id="@+id/privilege_notification_policy_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_notification_policy_page"/>
        <Button
            android:id="@+id/privilege_usage_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_usage_page"/>
        <Button
            android:id="@+id/privilege_read_notification_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_read_notification_page"/>
        <Button
            android:id="@+id/privilege_write_settings_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_write_settings_page"/>
        <Button
            android:id="@+id/privilege_app_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege_button_app_detail"
            android:layout_marginBottom="25dp"/>
    </LinearLayout>

</ScrollView>