<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioButton
        android:id="@+id/log_filter_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/activity_log_filter_all"/>
    <RadioButton
        android:id="@+id/log_filter_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/activity_log_filter_today"/>
    <RadioButton
        android:id="@+id/log_filter_three_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/activity_log_filter_three_days"/>
    <RadioButton
        android:id="@+id/log_filter_one_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/activity_log_filter_one_week"/>
</LinearLayout>