<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_action_flashlight_button_cancel"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="15sp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_activity_taskgui_att"
        android:text="@string/dialog_button_negative"/>
    <TextView
        android:id="@+id/dialog_action_flashlight_button_confirm"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="15sp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_activity_taskgui_att"
        android:text="@string/dialog_button_positive"/>
    <TextView
        android:id="@+id/dialog_action_flashlight_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/action_flashlight"/>
    <LinearLayout
        android:id="@+id/dialog_action_flashlight_selection_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_action_flashlight_title"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <RadioButton
            android:id="@+id/dialog_action_flashlight_unselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unselected"/>

        <RadioButton
            android:id="@+id/dialog_action_flashlight_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_flashlight_custom"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/dialog_action_flashlight_edit_area"
        android:layout_below="@+id/dialog_action_flashlight_selection_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_action_flashlight_edit"
            android:hint="@string/action_flashlight_hint_custom"
            android:layout_toLeftOf="@+id/dialog_action_flashlight_unit"
            android:digits="0123456789,"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_action_flashlight_unit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="16sp"
            android:text="ms"/>

    </RelativeLayout>
    <Button
        android:id="@+id/dialog_action_flashlight_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_action_flashlight_edit_area"
        android:layout_centerHorizontal="true"
        android:text="@string/preview"/>
</RelativeLayout>