<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/dialog_trigger_brightness_button_cancel"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="15sp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_activity_taskgui_att"
        android:text="@string/dialog_button_negative"/>
    <TextView
        android:id="@+id/dialog_trigger_brightness_button_confirm"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="15sp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_activity_taskgui_att"
        android:text="@string/dialog_button_positive"/>
    <TextView
        android:id="@+id/dialog_trigger_brightness_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:text="@string/activity_trigger_brightness"/>
    <LinearLayout
        android:id="@+id/brightness_trigger_selection_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_trigger_brightness_title"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/brightness_trigger_higher_than"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trigger_brightness_higher_than"
            android:layout_margin="2dp"/>
        <RadioButton
            android:id="@+id/brightness_trigger_lower_than"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trigger_brightness_lower_than"
            android:layout_margin="2dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/brightness_trigger_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brightness_trigger_selection_area"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/color_activity_taskgui_att"
        android:textSize="14sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@+id/brightness_trigger_current"
        android:layout_marginBottom="35dp">
        <EditText
            android:id="@+id/brightness_trigger_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/trigger_brightness_edit_hint"
            android:inputType="number"
            android:digits="0123456789"
            android:singleLine="true"
            android:maxEms="6"
            android:layout_toLeftOf="@+id/brightness_trigger_unit"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/brightness_trigger_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/color_black"
            android:layout_marginRight="20dp"
            android:text="@string/trigger_brightness_unit"/>
    </RelativeLayout>


</RelativeLayout>